fixed sidebar menu issue; reduce width and made the height responsive on mobile devices

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -110,8 +110,8 @@ header {
   position: fixed;
   bottom: 0;
   left: -100%;
-  width: 280px;
-  height: 87.7%;
+  width: 250px;
+  height: 94.5%;
   box-shadow: 2px 1px 1px 1px rgba(0, 0, 0, 0.2);
   opacity: 0;
   transition: 1000ms;
